--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/express": "^4.17.21",
       "@types/node": "^16.11.10",
+      "nodemon": "^3.0.1",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "cors": "^2.8.5",
       "dotenv": "^16.3.1",
+      "express": "^4.18.2",
+      "helmet": "^7.1.0",
       "mysql2": "^3.6.5",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "dev": "nodemon src/index.ts"
    }
 }
