--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
       "@types/node": "^16.11.10",
       "nodemon": "^3.0.1",
@@ -11,10 +12,12 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "axios": "^1.6.2",
       "cors": "^2.8.5",
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "helmet": "^7.1.0",
+      "http-errors": "^2.0.0",
       "mysql2": "^3.6.5",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
@@ -22,6 +25,7 @@
    "scripts": {
       "start": "ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
-      "dev": "nodemon src/index.ts"
+      "dev": "npx nodemon",
+      "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/data-source.ts"
    }
 }
