--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
    "devDependencies": {
       "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
+      "@types/multer": "^1.4.11",
       "@types/node": "^16.11.10",
       "nodemon": "^3.0.1",
       "ts-node": "10.7.0",
@@ -18,6 +19,7 @@
       "express": "^4.18.2",
       "helmet": "^7.1.0",
       "http-errors": "^2.0.0",
+      "multer": "^1.4.5-lts.1",
       "mysql2": "^3.6.5",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
