--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
-   "devDependencies": {
-      "@types/cors": "^2.8.17",
-      "@types/express": "^4.17.21",
-      "@types/multer": "^1.4.11",
-      "@types/node": "^16.11.10",
-      "nodemon": "^3.0.1",
-      "ts-node": "10.7.0",
-      "typescript": "4.5.2"
+   "scripts": {
+      "start": "node build/index.js",
+      "build": "tsc -p .",
+      "typeorm": "typeorm-ts-node-commonjs",
+      "dev": "npx nodemon",
+      "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/data-source.ts"
    },
    "dependencies": {
       "axios": "^1.6.2",
@@ -24,10 +22,16 @@
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
    },
-   "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs",
-      "dev": "npx nodemon",
-      "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/data-source.ts"
+   "devDependencies": {
+      "@types/cors": "^2.8.17",
+      "@types/express": "^4.17.21",
+      "@types/helmet": "^4.0.0",
+      "@types/multer": "^1.4.11",
+      "@types/node": "^16.11.10",
+      "nodemon": "^3.0.1",
+      "ts-node": "10.7.0",
+      "tsc-alias": "^1.8.8",
+      "tsconfig-paths": "^4.2.0",
+      "typescript": "4.5.2"
    }
 }
