--- a/package.json
+++ b/package.json
@@ -12,20 +12,24 @@
    },
    "dependencies": {
       "axios": "^1.6.2",
+      "bcrypt": "^5.1.1",
       "cors": "^2.8.5",
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "helmet": "^7.1.0",
       "http-errors": "^2.0.0",
+      "jsonwebtoken": "^9.0.2",
       "multer": "^1.4.5-lts.1",
       "mysql2": "^3.6.5",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
    },
    "devDependencies": {
+      "@types/bcrypt": "^5.0.2",
       "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
       "@types/helmet": "^4.0.0",
+      "@types/jsonwebtoken": "^9.0.5",
       "@types/multer": "^1.4.11",
       "@types/node": "^16.11.10",
       "nodemon": "^3.0.1",
